# phoebe1

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  SPECS  TODO  aclocal.m4  configure.in  phoebe.glade  setup_dyn.py  setup_static.py
cats/ld/: 2mass_h.ld  2mass_j.ld  2mass_ks.ld  bolometric.ld  brite_blue.ld  brite_red.ld  corot_exo.ld  corot_sis.ld  cousins_r.ld  geneva_b.ld  geneva_b1.ld  geneva_b2.ld  geneva_g.ld  geneva_v.ld  geneva_v1.ld  hipparcos.ld  johnson_b.ld  johnson_u.ld  kepler.ld  lsst_i.ld  lsst_r.ld  lsst_y4.ld  lsst_z.ld  models.list  sloan_g.ld  sloan_i.ld  sloan_r.ld  sloan_u.ld  sloan_z.ld  smei.ld  spitzer_b1.ld  spitzer_b2.ld  spitzer_b3.ld  spitzer_b4.ld  stereo_hi1a_noqe.ld  stereo_hi1a_qe.ld  stereo_hi1b_noqe.ld  stereo_hi1b_qe.ld  stromgren_b.ld  stromgren_u.ld  (+10 more)
cats/ld.phoenix/: kepler.ld  models.list
cats/vanhamme/: ld_availability.data
data/: UVLeo.B  UVLeo.rv1
defaults/: Makefile.am  default.phoebe
phoebe-gui/: Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
phoebe-gui/glade/: Makefile.am  Makefile.in  phoebe_about.glade  phoebe_cairo.glade  phoebe_load_lc.glade  phoebe_settings.glade
phoebe-gui/pixmaps/: Makefile.am  Makefile.in
phoebe-gui/src/: Makefile.am  Makefile.in  phoebe_gui_accessories.c  phoebe_gui_accessories.h  phoebe_gui_base.c  phoebe_gui_base.h  phoebe_gui_build_config.h.in  phoebe_gui_callbacks.c  phoebe_gui_callbacks.h  phoebe_gui_error_handling.c  phoebe_gui_error_handling.h  phoebe_gui_global.h  phoebe_gui_main.c  phoebe_gui_plotting.c  phoebe_gui_plotting.h  phoebe_gui_treeviews.c  phoebe_gui_treeviews.h  phoebe_gui_types.c  phoebe_gui_types.h  version.h
phoebe-lib/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac
phoebe-lib/autoconfig/: mkinstalldirs
phoebe-lib/libphoebe/: Makefile.am  Makefile.in  phoebe_accessories.c  phoebe_base.c  phoebe_base.h  phoebe_build_config.h.in  phoebe_calculations.c  phoebe_calculations.h  phoebe_configuration.c  phoebe_constraints.grm.y  phoebe_data.c  phoebe_error_handling.c  phoebe_error_handling.h  phoebe_fitting.c  phoebe_fortran_interface.c  phoebe_fortran_interface.h  phoebe_global.h  phoebe_ld.c  phoebe_parameters.c  phoebe_parameters.h  phoebe_types.c  phoebe_types.h
phoebe-lib/libwd/: Makefile.am  Makefile.in  atmx.f  bbl.f  dc.sub.f  gabs.f  lc.sub.f  lcr.f  light.f  lum.f  lump.f  mlrg.f  modlog.f  olump.f  planckint.f  surfas.f  volume.f  wd.h  wrlci.f
phoebe-lib/ptf/: Makefile.am  Makefile.in  brite_blue.ptf  smei.ptf  spitzer_b1.ptf  spitzer_b2.ptf  spitzer_b3.ptf  spitzer_b4.ptf  stereo_hi1a.ptf  stereo_hi1a_qe.ptf  stereo_hi1b.ptf  stereo_hi1b_qe.ptf  tess.ptf
phoebe-py/: README.md  phoebe_backend.c  setup.py  test.lc  test.phoebe  test.py  test.rv1  test.rv2
phoebe-scripter/: Makefile.in  aclocal.m4  configure  configure.ac
phoebe_legacy/: __init__.py  libphoebe_legacy.c
pixmaps/: answer_bad.xpm  answer_empty.xpm  answer_good.xpm  answer_unknown.xpm  empty_chi2.xpm  empty_rv.xpm  empty_si.xpm  logo.xpm
scripts/: Makefile.am
src/: main.c  phoebe_allocations.c  phoebe_allocations.h  phoebe_binning.c  phoebe_binning.h  phoebe_calculations.c  phoebe_calculations.h  phoebe_chi2.c  phoebe_chi2.h  phoebe_configuration.c  phoebe_configuration.h  phoebe_fortran_implementations.c  phoebe_fortran_implementations.h  phoebe_fortran_routines.f  phoebe_global.h  phoebe_grid.c  phoebe_gui.c  phoebe_gui.h  phoebe_gui_accessories.c  phoebe_gui_accessories.h  phoebe_gui_callbacks.c  phoebe_gui_callbacks.h  phoebe_gui_keyword.c  phoebe_gui_ld.h  phoebe_gui_plot.c  phoebe_gui_plot.h  phoebe_gui_support.c  phoebe_limb_darkening.c  phoebe_phsv_pcsv.h  phoebe_plot.c  phoebe_scripting.h  phoebe_transformations.c  phoebe_transformations.h
stable/: ChangeLog  Makefile.am  NEWS  README  acconfig.h  aclocal.m4  configure.in  phoebe.glade
stable/data/: Makefile.am  UVLeo.V  UVLeo.phoebe  UVLeo.rv2
stable/phoebe-gui/: Makefile.in  aclocal.m4  configure  configure.ac
stable/phoebe-gui/glade/: Makefile.in  phoebe_settings.glade
stable/phoebe-gui/pixmaps/: Makefile.in
stable/phoebe-gui/src/: phoebe_gui_base.c  phoebe_gui_build_config.h.in  phoebe_gui_callbacks.c  phoebe_gui_error_handling.h  phoebe_gui_main.c  phoebe_gui_plotting.c  phoebe_gui_plotting.h  phoebe_gui_treeviews.c  phoebe_gui_types.c
stable/phoebe-lib/: Makefile.in  aclocal.m4  configure
stable/phoebe-lib/docs/reference/: Makefile.in
stable/phoebe-lib/libphoebe/: Makefile.in  phoebe_base.c  phoebe_calculations.c  phoebe_calculations.h  phoebe_configuration.c  phoebe_data.c  phoebe_fitting.h  phoebe_fortran_interface.c  phoebe_types.c  phoebe_types.h
stable/phoebe-lib/libwd/: Makefile.in  bbl.f  dc.sub.f  lc.sub.f  lcr.f  light.f  lum.f  modlog.f  rddata.f  surfas.f  wd.h
stable/phoebe-lib/ptf/: Makefile.am  Makefile.in
stable/phoebe-lib/wd/: Makefile.in
stable/phoebe-py/: phoebe_backend.c  test.phoebe  test.py
stable/phoebe-scripter/: Makefile.in  configure
stable/phoebe-scripter/help/: Makefile.in
stable/phoebe-scripter/src/: main.c  phoebe_scripter_commands.c  phoebe_scripter_core.c
stable/pixmaps/: Makefile.am  caution.xpm  under_construction.xpm
stable/scripts/: find_preliminary_solution.script  find_preliminary_solution_for_w_uma.script
stable/src/: Makefile.am  config.h.in  main.c  phoebe_allocations.c  phoebe_allocations.h  phoebe_calculations.c  phoebe_calculations.h  phoebe_chi2.c  phoebe_error_handling.c  phoebe_error_handling.h  phoebe_fortran_implementations.h  phoebe_fortran_routines.f  phoebe_global.h  phoebe_grid.h  phoebe_gui.c  phoebe_gui.h  phoebe_gui_accessories.c  phoebe_gui_callbacks.c  phoebe_gui_callbacks.h  phoebe_gui_keyword.c  phoebe_gui_keyword.h  phoebe_gui_ld.c  phoebe_gui_plot.c  phoebe_limb_darkening.c  phoebe_limb_darkening.h  phoebe_phsv_pcsv.c  phoebe_plot.c  phoebe_plot.h  phoebe_scripting.c  phoebe_transformations.c  phoebe_transformations.h
stable/wd/: ChangeLog.PHOEBE  Makefile.am  dc  lc
stable/wd/src/: dc.f
wd/: ChangeLog.PHOEBE  Makefile.am  dc  lc
(+73 files in other folders)
