########################################################################
#                                                                      #
#   Author of configure.in: Andrej Prsa <andrej.prsa@fmf.uni-lj.si>    #
#                                                                      #
#                               * * *                                  #
#                                                                      #
#    When you change configure.in, don't forget to run autoconf for    #
#                     changes to take effect!                          #
#                                                                      #
#                               * * *                                  #
#                                                                      #
########################################################################
#                                                                      #
# This program is free software; you can redistribute it and/or modify #
# it under the terms of the GNU General Public License as published by #
# the Free Software Foundation; either version 2, or (at your option)  #
# any later version.                                                   #
#                                                                      #
# This program is distributed in the hope that it will be useful,      #
# but WITHOUT ANY WARRANTY; without even the implied warranty of       #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        #
# GNU General Public License for more details.                         #
#                                                                      #
# You should have received a copy of the GNU General Public License    #
# along with this program; if not, write to the Free Software          #
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.            #
#                                                                      #
########################################################################

# Put a revision line in configure script:
	AC_REVISION($revision: 0.28a $)

# Initialize configure.in for autoconf:
	AC_INIT(src/main.c)
	AC_CONFIG_AUX_DIR(autoconfig)

# Initialize configure.in for automake:
	AM_INIT_AUTOMAKE(phoebe,0.28a)
	AM_CONFIG_HEADER(src/config.h)

# Check for system programs:
	# C compiler:
		AC_PROG_CC
		if test bla$CC = bla ; then
		echo
		echo "C compiler (gcc, cc, ...) cannot be found."
		echo "Please install it and restart ./configure."
		echo
		exit
		fi
	# FORTRAN compiler:
		AC_PROG_F77
		if test bla$F77 = bla ; then
		echo
		echo "Fortran compiler (F77, G77, ...) cannot be found."
		echo "Please install it and restart ./configure."
		echo
		exit
		fi
	# Are symbolic links allowed:
		AC_PROG_LN_S
	# Install script:
		AC_PROG_INSTALL
	# Make program:
		AC_PROG_MAKE_SET
	# Program to allow changing names to installed package:
		AC_ARG_PROGRAM
	# Program to index archives:
		AC_PROG_RANLIB

# Check for libraries:

	# First and most important: is GTK+ present:
		AM_PATH_GTK(1.2.0, , AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path?))

	# Optional SuperMongo support:
		AC_ARG_ENABLE(sm,
	  [  --enable-sm             Use SuperMongo for drawing graphs (default=yes)],
		[ac_enable_sm=no], [ac_enable_sm=yes])

		sm_check_passed=1
		AC_CHECK_LIB(devices, main, , sm_check_passed=0)
		AC_CHECK_LIB(plotsub, main, , sm_check_passed=0)
		AC_CHECK_LIB(utils,   main, , sm_check_passed=0)

		AC_MSG_CHECKING([for SuperMongo support])
		if test $sm_check_passed -eq 1 -a $ac_enable_sm = "yes"; then
		AC_MSG_RESULT(yes)
		AC_DEFINE(PHOEBE_SM_SUPPORT, 1, Define if SuperMongo is supported:)
		supermongo="yes"
		else
		supermongo="no"
		AC_MSG_RESULT(no)
		fi
		AM_CONDITIONAL(SM_SUPPORT, test "$supermongo" = "yes")

	# GNUPlot support:
		AC_DEFUN(AC_PROG_GNUPLOT, [AC_CHECK_PROG(GNUPLOT,gnuplot,yes)])
		AC_PROG_GNUPLOT
		if test empty$GNUPLOT = emptyyes ; then
		AC_DEFINE(PHOEBE_GNUPLOT_SUPPORT, 1, Define if GNUPlot is supported:)
		fi

	# If both SM and GNUPlot are missing, stop the configuration:
		if test $supermongo = no -a empty$GNUPLOT = empty ; then
		echo
		echo "Neither SuperMongo nor GNUPlot seem to be installed on your system!"
		echo "Please install either of the packages and restart ./configure."
		echo
		exit
		fi

	# Netpbm (ppmtoxpm) support:
		AC_DEFUN(AC_PROG_NETPBM, [AC_CHECK_PROG(PPMTOXPM,ppmtoxpm,yes)])
		AC_PROG_NETPBM
		if test empty$PPMTOXPM = empty ; then
		echo
		echo "The netpbm package that provides ppmtoxpm tool isn't installed."
		echo "Please install it and restart ./configure."
		echo
		exit
		fi


# Check for header files.
	# Is C compiler ANSI-compliant:
		AC_HEADER_STDC
	# Are headers used in PHOEBE present:
		AC_CHECK_HEADERS(errno.h malloc.h unistd.h)

# Check for typedefs, structures, and compiler characteristics:

# Check for library functions:
	# Are "exotic" c functions used in PHOEBE present:
		AC_CHECK_FUNCS(getcwd mkdir)

# Make sure FORTRAN internal libraries will be available for linking:
	AC_F77_LIBRARY_LDFLAGS

# FIX ME! #
# Define a switch to tell FORTRAN what architecture it is compiling for:
	AC_DEFINE(f2cFortran)

# Optional debugging support:
	debugstate="no"
	AC_ARG_ENABLE(debug,
	  [  --enable-debug          Use verbose debugging mode (default=no)],
		[ac_enable_debug=yes], [ac_enable_debug=no])
	if test $ac_enable_debug = "yes"; then
	AC_DEFINE(PHOEBE_DEBUG_SUPPORT, 1, Define if verbose debugging is required:)
	debugstate="yes"
	fi

# Finally, write everything to Makefiles:
	AC_OUTPUT([
             Makefile
             data/Makefile
             defaults/Makefile
             scripts/Makefile
             src/Makefile
             pixmaps/Makefile
             wd/Makefile
            ])

	echo PHOEBE configuration complete!
	echo
