########################################################################
#                                                                      #
#    Author of Makefile.am: Andrej Prsa <andrej.prsa@fmf.uni-lj.si>    #
#                                                                      #
########################################################################
#                                                                      #
# This program is free software; you can redistribute it and/or modify #
# it under the terms of the GNU General Public License as published by #
# the Free Software Foundation; either version 2, or (at your option)  #
# any later version.                                                   #
#                                                                      #
# This program is distributed in the hope that it will be useful,      #
# but WITHOUT ANY WARRANTY; without even the implied warranty of       #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        #
# GNU General Public License for more details.                         #
#                                                                      #
# You should have received a copy of the GNU General Public License    #
# along with this program; if not, write to the Free Software          #
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.            #
#                                                                      #
########################################################################

phoebepixmapsdir = $(datadir)/phoebe/pixmaps
phoebepixmaps_DATA = answer_bad.xpm         \
                     answer_empty.xpm       \
                     answer_good.xpm        \
                     answer_unknown.xpm     \
                     caution.xpm            \
                     empty_chi2.xpm         \
                     empty_lc.xpm           \
                     empty_rv.xpm           \
                     empty_si.xpm           \
		     icon.png               \
                     logo.xpm               \
                     under_construction.xpm

EXTRA_DIST = $(phoebepixmaps_DATA)
